# plantuml-workshop

./: .gitignore  CMakeLists.txt  README.md  force-remake.sh  generate.sh  presentation.tex  remake.sh  todo
activity-diagram/: activity-diagram-voorbeeld.pu
class-diagram/: class-diagrams.pu
diagrams/: CMakeLists.txt  activity-diagram-extended.pu  activity-diagram-minimal.pu  activity-diagram.pu  class-diagram-extended.pu  class-diagram-minimal.pu  class-diagram.pu  component-diagram-minimal.pu  object-diagram-extended.pu  object-diagram-minimal.pu  object-diagram.pu  state-diagram-extended.pu  state-diagram-minimal.pu  state-diagram.pu  usecase-diagram-extended.pu  usecase-diagram-minimal.pu  usecase-diagram.pu  workshop-usecase.pu
images/: CMakeLists.txt  a.gv
state-diagram/: document-lifecycle.pu  state-diagram-voorbeeld.pu  state-diagram-zwembadkluisje.pu  workshop-activity.pu
usecase-diagram/: usecase-diagram-restaurant.pu  usecase-diagram-voorbeeld.pu
